# libconfplus

./: CMakeLists.txt  LICENSE  config.h.in
backends/: CMakeLists.txt
backends/ini/: ini.cpp  ini.h
backends/yaml/: yaml.cpp  yaml.h
cmake/: FindYAML.cmake
src/: CMakeLists.txt  backend.cpp  backend.h  conf.cpp  conf.h  exception.cpp  exception.h  libconfplusConfig.cmake
tools/: CMakeLists.txt  confctl.cpp
